// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Comment Default View 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="bg-gray-200 p-8 rounded-lg relative"
      >
        <header
          class="flex justify-between"
        >
          <h2
            class="font-semibold text-gray-700"
          >
            April O'Neil
          </h2>
          <time
            class="text-xs text-gray-500"
            datetime="2022-04-01T12:34:56Z"
          >
            1 April 2022
          </time>
        </header>
        <p
          class="text-sm mt-2"
        >
          Cowabunga dudes. This is the first comment!
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-gray-200 p-8 rounded-lg relative"
    >
      <header
        class="flex justify-between"
      >
        <h2
          class="font-semibold text-gray-700"
        >
          April O'Neil
        </h2>
        <time
          class="text-xs text-gray-500"
          datetime="2022-04-01T12:34:56Z"
        >
          1 April 2022
        </time>
      </header>
      <p
        class="text-sm mt-2"
      >
        Cowabunga dudes. This is the first comment!
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Components/Comment Moderator View 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="bg-gray-200 p-8 rounded-lg relative"
      >
        <header
          class="flex justify-between"
        >
          <h2
            class="font-semibold text-gray-700"
          >
            April O'Neil
          </h2>
          <time
            class="text-xs text-gray-500"
            datetime="2022-04-01T12:34:56Z"
          >
            1 April 2022
          </time>
        </header>
        <p
          class="text-sm mt-2"
        >
          Cowabunga dudes. This is the first comment!
        </p>
        <button
          class="absolute bottom-2 right-2 bg-red-500 text-xs rounded text-white px-2 py-1"
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-gray-200 p-8 rounded-lg relative"
    >
      <header
        class="flex justify-between"
      >
        <h2
          class="font-semibold text-gray-700"
        >
          April O'Neil
        </h2>
        <time
          class="text-xs text-gray-500"
          datetime="2022-04-01T12:34:56Z"
        >
          1 April 2022
        </time>
      </header>
      <p
        class="text-sm mt-2"
      >
        Cowabunga dudes. This is the first comment!
      </p>
      <button
        class="absolute bottom-2 right-2 bg-red-500 text-xs rounded text-white px-2 py-1"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
